syntax = "proto3";

package ToolboxPlaneMessages;
import "FlightController.proto";
import "PDB.proto";
import "Nav.proto";
import "FlightControllerSetpoint.proto";

message FlightComputer {
  FlightController flightController = 1;
  PDB pdb = 2;
  Nav nav = 3;
  FlightControllerSetpoint flightControllerSetpoint = 4;
}
