syntax = "proto3";

package ToolboxPlaneMessages;


enum Switch {
  UP = 0;
  CENTRE = 1;
  DOWN = 2;
}
message Taranis {
  int32 throttleMixed = 1;
  int32 elevonLeftMixed = 2;
  int32 elevonRightMixed = 3;
  int32 throttleRaw = 4;
  int32 pitchRaw = 5;
  int32 rollRaw = 6;
  bool isArmed = 7;
  bool overrideActive = 8;
  int32 rssi = 9;
}
